coding experience section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,23 @@
 
             </div>
         </div>
-        <div id="second"></div>
+        <div id="experience">
+            <div class="org">
+                <h1>Lucid Motors</h1>
+            </div>
+            <div class="org">
+                <h1>Baron Capital</h1>
+            </div>
+            <div class="org">
+                <h1>NFL</h1>
+            </div>
+            <div class="org">
+                <h1>Placenew</h1>
+            </div>
+            <div class="org lastorg">
+                <h1>Somos</h1>
+            </div>
+        </div>
     </div>
 </body>
 </html>
