completed experience section animation

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Simple Portfolio</title>
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
     rel="stylesheet"
@@ -57,7 +57,11 @@
 
             </div>
         </div>
+        <div id="pointer-circle-2">
+            <h6>VIEW</h6>
+        </div>
         <div id="experience">
+           
             <div class="org">
                 <img src="./images/lucid-motors.webp" alt="">
                 <h1>Lucid Motors</h1>
